@@ -84,7 +84,11 @@ string_callback (GtkWidget *w, int button_num, gpointer data)
 	if (strncmp (s, "http://", strlen ("http://")) == 0 ||
 	    strncmp (s, "https://", strlen ("https://")) == 0 ||
 	    strncmp (s, "gopher://", strlen ("gopher://")) == 0 ||
-	    strncmp (s, "ftp://", strlen ("ftp://")) == 0) {
+	    strncmp (s, "ftp://", strlen ("ftp://")) == 0 ||
+	    strncmp (s, "file:", strlen ("file:")) == 0 ||
+	    strncmp (s, "ghelp:", strlen ("ghelp:")) == 0 ||
+	    strncmp (s, "man:", strlen ("man:")) == 0 ||
+	    strncmp (s, "info:", strlen ("info:")) == 0) {
 		gnome_url_show (s);
 		goto return_and_close;
 	}
