@@ -1,3 +1,8 @@
+Tue Nov 21 21:28:00 2000  George Lebl <jirka@5z.com>
+
+	* gnome-run.c: add support for launching "man:" "info:", "file:"
+	  and "ghelp:" URLs directly from the runbox
+
 2000-11-19  Karl Eichwalder  <ke@suse.de>
 
 	* extern.c (extern_before_remove): Adjust message string.
